# projects

./: .gitignore  BUILD  LICENSE  README.md  pants.toml  pyproject.toml  requirements.txt
docs/: _config.yml  _toc.yml  intro.md  test.ipynb
docs/base_schema/: for_contributions.md  how-it-works.md  overview.md
pants-plugins/: BUILD
pants-plugins/jupyter_book/: goals.py  register.py  target_types.py
src/base_schema/: register.py
src/base_schema/constructors/: dataclass.py  dataclass_test.py
src/base_schema/field_types/: __init__.py  all_types.py  conint.py  int.py  str.py
src/base_schema/types/: __init__.py  int.py  str.py
src/burst_fn/: sleepers.py
src/burst_fn/context_managers/: sync.py
