[tool.poetry]
name = "projects"
version = "0.1.0"
description = "All my projects in a monorepo"
authors = ["ericfeunekes <ericwill.f@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.13.1"
pendulum = "^2.1.2"
mypy = "^0.991"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
sphinxcontrib-mermaid = "^0.7.1"
pandas = "^1.5.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
